# synthralos-

./: .env  .env.bak  .env.new  .gitleaks.toml  .pre-commit-config.yaml  DASHBOARD_IMPLEMENTATION.md  DEPLOYMENT_SUMMARY.md  ENV_TEMPLATE.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STATUS_UPDATED.md  INTEGRATIONS_IMPLEMENTATION.md  MIGRATION_AND_SETUP_COMPLETE.md  MIGRATION_CHECK_AND_APPLY.md  MIGRATION_STATUS_AND_APPLY.md  PRD.md  PRD_ANALYSIS_REPORT.md  README_RENDER.md  RENDER_CONNECTION_FIX.md  RENDER_DEPLOYMENT.md  SUPABASE_MIGRATION.md  SYNCHRONIZATION_SUMMARY.md  TODO_IMPLEMENTATION.md  copier.yml  deployment.md  development.md  docker-compose.yml  frontendandbackend.md  package-lock.json  render-start.sh  render.yaml
.cursor/: mcp.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
backend/: .bandit  .env  Dockerfile  Dockerfile.worker  README.md  connector_batches_complete.json  pyproject.toml  render-start.sh
backend/app/: main.py  models.py
backend/app/agents/: __init__.py  router.py
backend/app/agents/frameworks/: __init__.py  agentgpt.py  archon.py  autogen.py  autogpt.py  base.py  camel.py  crewai.py  kush.py  kyro.py  metagpt.py  riona.py  swarm.py
backend/app/alembic/versions/: 20250102000000_add_platform_settings_table.py  20250104000000_add_clerk_user_id_and_metadata.py  XXXX_add_user_connector_connection.py  c1d1196b0e7d_enable_rls_on_all_tables.py  c4cd6f5a4f64_add_all_prd_models.py
backend/app/api/: deps.py  deps_guardrails.py  main.py
backend/app/api/middleware/: auth_tracking.py  csrf.py  guardrails.py
backend/app/api/routes/: admin_analytics.py  admin_connectors.py  admin_system.py  agents.py  browser.py  chat.py  clerk_webhooks.py  code.py  connectors.py  dashboard_realtime.py  dashboard_ws.py  email_templates.py  login.py  ocr.py  osint.py  rag.py  scraping.py  stats.py  storage.py  teams.py  users.py  utils.py  workflows.py
backend/app/browser/: __init__.py  service.py
backend/app/cache/: __init__.py  decorators.py  service.py
backend/app/code/: registry.py  service.py
backend/app/connectors/: __init__.py  loader.py  oauth.py  pkce.py  registry.py  webhook.py
backend/app/connectors/manifests/: activecampaign.json  airtable.json  amazon-s3.json  amplitude.json  anthropic-claude.json  apple-calendar.json  asana.json  aws.json  azure-blob-storage.json  basecamp.json  bitbucket.json  box.json  braintree.json  buffer.json  calendly.json  chargebee.json  circleci.json  clickup.json  close.json  cloudinary.json  cohere.json  copper.json  databricks.json  discord.json  docker-hub.json  doodle.json  dropbox.json  facebook.json  freshdesk.json  front.json  github.json  gitlab.json  gmail.json  google-ai.json  google-analytics.json  google-bigquery.json  google-calendar.json  google-cloud-storage.json  google-drive.json  help-scout.json  (+59 more)
backend/app/core/: config.py  db.py  security.py
backend/app/db/: query_optimizer.py
backend/app/guardrails/: __init__.py  service.py  validators.py
backend/app/models/: user_connector_connection.py
backend/app/observability/: __init__.py  langfuse.py  opentelemetry.py  posthog.py  wazuh.py
backend/app/ocr/: __init__.py  service.py
backend/app/osint/: service.py
backend/app/rag/: __init__.py  service.py
backend/app/scraping/: __init__.py  proxy_pool.py  service.py  stealth.py
backend/app/scripts/: __init__.py  validate_db_config.py
backend/app/self_healing/: __init__.py  archon_repair.py  selector_fix.py  service.py
backend/app/services/: __init__.py  api_keys.py  chat_processor.py  clerk_service.py  email_service.py  email_template_service.py  exceptions.py  nango.py  nango_service.py  realtime_sync.py  secrets.py  storage.py  system_alerts.py  team_service.py  workflow_notifications.py
backend/app/workflows/: __init__.py  activities.py  analytics.py  caching.py  debugging.py  dependencies.py  engine.py  history.py  idempotency.py  langgraph_engine.py  monitoring.py  parallel.py  prioritization.py  resource_limits.py  retry.py  scheduler.py  signals.py  state.py  testing.py  timeout.py  webhook_triggers.py  websocket.py  worker.py
backend/migrations/supabase/: 20250102000000_add_platform_settings_table.sql  20250104000000_add_clerk_user_id_and_metadata.sql  add_all_prd_models.sql
backend/scripts/: MIGRATION_GUIDE.md  README.md  add_rbac_columns.sql  alembic_to_supabase.py  apply_final_migration.sql  apply_supabase_migration.py  check-uv-lock.sh  check_and_apply_migrations.py  check_migration_status.sql  create_connectors.py  dev_worker.sh  diagnose_db_connection.py  execute_all_batches.py  execute_connector_migration.py  execute_remaining_batches.py  generate_openapi.py  init_connectors.py  migrate_connectors.sql  migrate_connectors_batch.py  migrate_connectors_rbac.py  migrate_connectors_supabase.py  promote_user_to_admin.py  register_connectors.py  start_worker.py  test_db_connection.py  test_nango_integration.py  verify_connection_string.py  verify_optional_services.py  wait_and_migrate.py
backend/scripts/connector_batches/: batch_1.sql  batch_10.sql  batch_2.sql  batch_3.sql  batch_4.sql  batch_5.sql  batch_6.sql  batch_7.sql  batch_8.sql  batch_9.sql
backend/tests/api/routes/: test_agents.py  test_chat.py  test_connectors.py  test_login.py  test_users.py  test_workflows.py
backend/tests/services/: test_agent_router.py  test_connector_registry.py  test_workflow_engine.py
docs/: ADMIN_AUTHENTICATION_EXPLAINED.md  ADMIN_DASHBOARD_COMPLETION.md  (+131 more)
(+161 files in other folders)
